Add router for contacts link

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
     </div>
     <br>
         <a href="#">Home</a>
-        <a href="#">Contact us</a>
+        <a [routerLink] = "'/contacts'">Contact us</a>
         <a href="#">Ministries</a>
         <a href="#">Prayer Request</a>
         <a href="#">What's Happening</a>
@@ -20,3 +20,4 @@
         <a href="#">FAQ</a>
         <a href="#">Photo Gallery</a>
 </div>
+<router-outlet></router-outlet>
