--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -27,9 +27,11 @@ hr {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 8px;
+    width: 100%;
 }
 .contact-card img {
     max-width: 100%;
+    width: 100%;
 }
 .contact-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
