--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -12,7 +12,15 @@
     <br>
         <a href="#">Home</a>
         <a [routerLink] = "'/contacts'">Contact us</a>
-        <a href="#">Ministries</a>
+        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Ministries
+            </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">CAMP HOPE</a>
+                    <a class="dropdown-item" href="#">EDUCATION SCHOLARSHIP</a>
+                    <a class="dropdown-item" href="#">WATER FILTRATION</a>
+                    <a class="dropdown-item" href="#">EXTENDED MISSION</a>
+                </div>
         <a href="#">Prayer Request</a>
         <a href="#">What's Happening</a>
         <a href="#">Who we are</a>
