added ministries card

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
     <div class="contact-body">
         <h1 class="contact-header">CONTACT US</h1>
         <hr>
-        <div class="contact-pic-center">
+        <div class="contact-pic-center"></div>
         </div>
         <div class="contact-people">
             <div *ngFor="let x of people">
@@ -14,6 +14,6 @@
                     <h5> {{ x.email }}</h5>
                 </div>
             </div>
-        </div>
+            
     </div>
 </div>
