--- a/src/app/ministry/ministry.component.css
+++ b/src/app/ministry/ministry.component.css
@@ -6,3 +6,24 @@ hr {
 .ministry-header {
     text-align: center;
 }
+
+.ministry-card {
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    margin: 8px;
+    width: 200px;
+}
+.ministry-card img {
+    width: 100%;
+}
+.ministry-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.ministry-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 5px;
+}
