--- a/src/app/home-page/header/header.component.css
+++ b/src/app/home-page/header/header.component.css
@@ -1,3 +1,7 @@
+hr {
+    border: 10px solid crimson;
+    width: 70%;
+}
 /* You can add global styles to this file, and also import other style files */
 h1 {
     color: rgb(0, 0, 0);
