--- a/src/app/home-page/body/body.component.html
+++ b/src/app/home-page/body/body.component.html
@@ -1,4 +1,4 @@
-<div class = "container1">
+<div class = "articletext">
     <div class = "row">
         <div class = "col-md-2"></div>
             <h4>{{author}}</h4>
@@ -22,7 +22,7 @@
         </h2>
     </div>
 </div>
-<div class = "container2">
+<div class = "right-bibleverse">
     <div class = "text-right">
         <h5>
                 James 1:27
