--- a/src/app/home-page/body/body.component.css
+++ b/src/app/home-page/body/body.component.css
@@ -39,12 +39,12 @@ h1 {
     font-size: 100%;
     margin-right: 0%;
   }
-.container1 {
+.articletext {
     margin : 20px;
     padding : 15px;
     
 }
-.container2 {
+.right-bibleverse {
     margin : 20px;
     padding : 15px;
     
