added router for ministry

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
     <br>
         <a href="#">Home</a>
         <a [routerLink] = "'/contacts'">Contact us</a>
-        <a href="#">Ministries</a>
+        <a [routerLink] = "'/ministries'">Ministries</a>
         <a href="#">Prayer Request</a>
         <a href="#">What's Happening</a>
         <a href="#">Who we are</a>
