--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
     <app-nav-bar></app-nav-bar>
     <!-- <app-contact></app-contact> -->
-    <app-ministry></app-ministry>
+    <!-- <app-ministry></app-ministry> -->
+    
 </div>
