--- a/src/app/home-page/body/body.component.css
+++ b/src/app/home-page/body/body.component.css
@@ -8,8 +8,6 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     /* font-weight: lighter; */
     font-size: 100%;
-    margin-left: 19ch;
-    margin-right: 35ch;
   }
   h3 {
     color: crimson;
@@ -40,12 +38,12 @@ h1 {
     margin-right: 0%;
   }
 .articletext {
-    margin : 20px;
-    padding : 15px;
-    
+    margin : 10px 150px 10px 300px;
+    height : 800px;
+    width : 450px;
 }
 .right-bibleverse {
-    margin : 20px;
-    padding : 15px;
-    
+    margin : -800px 800px 0px 800px;
+    height : 600px;
+    width : 100px;
 }
