--- a/src/app/home-page/body/body.component.html
+++ b/src/app/home-page/body/body.component.html
@@ -1,10 +1,10 @@
 <div class = "articletext">
     <div class = "row">
-        <div class = "col-md-2"></div>
+        <div class = "col-md-*"></div>
             <h4>{{author}}</h4>
     </div>
     <div class = "row">
-        <div class = "col-md-2"></div>
+        <div class = "col-md-*"></div>
             <h3>{{title}}</h3>
     </div>
     <div class = "row">
@@ -23,7 +23,7 @@
     </div>
 </div>
 <div class = "right-bibleverse">
-    <div class = "text-right">
+    <div class = "text-left" style = "float: right;">
         <h5>
                 James 1:27
                 <br>Religion that God our Father accepts as pure and faultless is this: to look after orphans and widows in their distress and to keep oneself from being polluted by the world.
