--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
             <span class="menu"> Menu </span>
     </div>
     <br>
-        <a href="#">Home</a>
+        <a [routerLink] = "'/homepage'">Home</a>
         <a [routerLink] = "'/contacts'">Contact us</a>
         <a [routerLink] = "'/ministries'">Ministries</a>
         <a href="#">Prayer Request</a>
