--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -12,9 +12,9 @@
     <br>
         <a [routerLink] = "'/homepage'" (click)="closeNav()">Home</a>
         <a [routerLink] = "'/contacts'" (click)="closeNav()">Contact us</a>
-        <a class="dropdown-toggle" [routerLink] = "'/ministries'" (click)="closeNav() role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle" [routerLink] = "'/ministries'"  role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Ministries
-            </a>
+        </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" href="#">CAMP HOPE</a>
                     <a class="dropdown-item" href="#">EDUCATION SCHOLARSHIP</a>
