--- a/src/app/homepage/body/body.component.html
+++ b/src/app/homepage/body/body.component.html
@@ -1,10 +1,10 @@
 <div class = "articletext">
     <div class = "row">
-        <div class = "col-md-*"></div>
+        <div class = "position-fixed"></div>
             <h4>{{author}}</h4>
     </div>
     <div class = "row">
-        <div class = "col-md-*"></div>
+        <div class = "position-fixed"></div>
             <h3>{{title}}</h3>
     </div>
     <div class = "row">
@@ -25,8 +25,8 @@
 <div class = "right-bibleverse">
     <div class = "text-left" style = "float: right;">
         <h5>
-                James 1:27
-                <br>Religion that God our Father accepts as pure and faultless is this: to look after orphans and widows in their distress and to keep oneself from being polluted by the world.
+                <a href="https://www.biblegateway.com/passage/?search=James+1%3A27&version=NIV" target="_blank">James 1:27</a>
+                <br><br>Religion that God our Father accepts as pure and faultless is this: to look after orphans and widows in their distress and to keep oneself from being polluted by the world.
         </h5>
     </div>
 </div>
