--- a/src/app/homepage/header/header.component.css
+++ b/src/app/homepage/header/header.component.css
@@ -8,19 +8,12 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 500%;
   }
-  h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-  }
-  body {
-    margin: 2em;
-  }
-  body, input[type="text"], button {
-    color: #333;
-    font-family: Cambria, Georgia;
-  }
-  /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
+.header-size {
+  margin : 0% 0% 5% 45%;
+  height : 10px;
+  width : 100%;
+}
+.header {
+  height : 20%;
+  width : 100%;
+}
