--- a/src/app/homepage/body/body.component.css
+++ b/src/app/homepage/body/body.component.css
@@ -38,7 +38,7 @@ h1 {
     margin: -180% 0% 0% 50%;
   }
 .articletext {
-    margin : 10px 150px 200px 300px;
+    margin : 5% 150px 200px 300px;
     height : 800px;
     width : 450px;
 }
@@ -46,4 +46,9 @@ h1 {
     margin : -30% -50% 0% 60%;
     height : 600px;
     width : 300px;
+}
+.body-bottom {
+  margin: 0 auto;
+  height: 200px;
+  width: 100%
 }
