added prayer request

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -21,7 +21,7 @@
                     <a class="dropdown-item" href="#">WATER FILTRATION</a>
                     <a class="dropdown-item" href="#">EXTENDED MISSION</a>
                 </div>
-        <a href="#" (click)="closeNav()">Prayer Request</a>
+        <a [routerLink] = "'/prayer_request'" (click)="closeNav()">Prayer Request</a>
         <a href="#" (click)="closeNav()">What's Happening</a>
         <a href="#" (click)="closeNav()">Who we are</a>
         <a href="#" (click)="closeNav()">Culture Connection</a>
