created lightblue-crimson theme

--- a/src/app/homepage/body/body.component.html
+++ b/src/app/homepage/body/body.component.html
@@ -25,6 +25,7 @@
 <div class = "right-bibleverse">
     <div class = "text-left" style = "float: right;">
         <h5>
+            <b href="https://www.pngkey.com/"><img src="https://www.pngkey.com/png/full/102-1028565_small-story-book-clip-art.png" width="50" height="50"></b>
             <style>
             a:link {
                 color:black;
@@ -47,4 +48,4 @@
         </h5>
     </div>
 </div>
-<div class = "body-bottom"></div>
+<div class = "body-bottom" style = "background-color: lightblue"></div>
