--- a/src/app/min-camp-hope/min-camp-hope.component.html
+++ b/src/app/min-camp-hope/min-camp-hope.component.html
@@ -23,3 +23,4 @@
     But by the grace of God, those who came experienced overwhelming joy and love through games and our team at camp...that point them to the Love and salvation of Christ. At the end of everyone of our camps is our traditional invitation to accept Christ. Most orphans (about 90%) of non-believing orphans will come to receive Christ; plus recommitting of faith from believing orphans. 
     The experience is both rewarding and overwhelming for all leaders to witness the presence of the Lord residing at our Camps.
 </p>
+<div class = "hope-bottom" style = "background-color: lightblue"></div>
