--- a/src/app/prayer-request/prayer-request.component.html
+++ b/src/app/prayer-request/prayer-request.component.html
@@ -10,8 +10,11 @@
     <p class="note">
         As servants for God's harvest, we know very well that we are not able to accomplish anything except through prayers by our faithful friends and families around the world. 
         We are grateful of your partnership and your faithfulness to lift us up in your prayers at home, in school groups, congregational prayers...
+        <br><br><br><br><br>
     </p>
 </div>
+
+<hr>
 
 <div class = "prayer-cards">
     <div class = "prayer-card">
@@ -37,3 +40,4 @@
         Pray for our finance & wisdom to use it completely under His guidance. 
     </div>
 </div>
+<div class = "prayer-bottom" style = "background-color: lightblue"></div>
