--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -14,6 +14,6 @@
                     <h6> {{ x.email }}</h6>
                 </div>
             </div>
-        <div class="contact-bottom" ></div>
+        <div class="contact-bottom" style = "background-color: lightblue"></div>
     </div>
 </div>
