--- a/src/app/homepage/body/body.component.css
+++ b/src/app/homepage/body/body.component.css
@@ -1,12 +1,12 @@
 h1 {
     color: rgb(0, 0, 0);
+    background-color: lightblue;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 500%;
   }
   h2 {
     color: #444;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    /* font-weight: lighter; */
     font-size: 125%;
   }
   h3 {
@@ -38,7 +38,7 @@ h1 {
     margin: -180% 0% 0% 50%;
   }
 .articletext {
-    margin : 5% 150px 200px 300px;
+    margin : 5% 150px 250px 300px;
     height : 800px;
     width : 450px;
 }
@@ -50,5 +50,5 @@ h1 {
 .body-bottom {
   margin: 0 auto;
   height: 200px;
-  width: 80%
+  width: 100%;
 }
