--- a/src/app/ministry/ministry.component.html
+++ b/src/app/ministry/ministry.component.html
@@ -21,6 +21,6 @@
                 <a href ="{{x.URL}}"> {{ x.note }} </a>
             </div>
         </div>
-        <div class = "ministry-bottom" ></div>
+        <div class = "ministry-bottom" style = "background-color: lightblue"></div>
     </div>
 </div>
