--- a/src/app/prayer-request/prayer-request.component.css
+++ b/src/app/prayer-request/prayer-request.component.css
@@ -4,8 +4,8 @@
 }
 
 hr {
-    border: 1vh solid crimson;
-    width: 70%;
+    border: 10px solid crimson;
+    width: 90%;
 }
 
 .body{
@@ -45,4 +45,10 @@ hr {
 
 .prayer-card img {
     width: 100%;
+}
+
+.prayer-bottom {
+    margin: 0 auto;
+    height: 200px;
+    width: 100%
 }
