--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -9,29 +9,39 @@ hr {
 }
 
 .contact-pic-center {
-    background-color: black;
-    width: 70%;
-    height: 200px;
-    text-align: center;
-    margin: 0 auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
-.contact-people {
+.contact-cards {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 5px;
+    padding: 10px;
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 .contact-card {
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    margin: 8px;
+    margin: 30px;
+    margin-left: 15px;
     width: 90%;
+    height: 90%;
 }
 .contact-card img {
     max-width: 100%;
-    width: 100%;
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: fill;
+    margin-bottom: 6%;
+
 }
 .contact-card:hover {
     box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
