--- a/src/app/homepage/body/body.component.css
+++ b/src/app/homepage/body/body.component.css
@@ -39,7 +39,7 @@ h1 {
     margin: -180% 0% 0% 50%;
   }
 .articletext {
-    margin : 5% 150px 200px 300px;
+    margin : 5% 150px 250px 300px;
     height : 800px;
     width : 450px;
 }
@@ -49,7 +49,9 @@ h1 {
     width : 300px;
 }
 .body-bottom {
-  margin: 0 auto;
+  overflow-x : hidden;
+  margin-left: -50%;
+  max-width: 100%;
   height: 200px;
-  width: 100%;
+  width: 50%;
 }
