--- a/src/app/homepage/body/body.component.html
+++ b/src/app/homepage/body/body.component.html
@@ -25,6 +25,7 @@
 <div class = "right-bibleverse">
     <div class = "text-left" style = "float: right;">
         <h5>
+            <b href="https://www.pngkey.com/"><img src="https://www.pngkey.com/png/full/102-1028565_small-story-book-clip-art.png" height = "30" width = "40"></b>
             <style>
             a:link {
                 color:black;
@@ -43,7 +44,7 @@
             }
             </style>
                 <a href="https://www.biblegateway.com/passage/?search=James+1%3A27&version=NIV" target="_blank">James 1:27</a>
-                <br><br>Religion that God our Father accepts as pure and faultless is this: to look after orphans and widows in their distress and to keep oneself from being polluted by the world.
+                <br>Religion that God our Father accepts as pure and faultless is this: to look after orphans and widows in their distress and to keep oneself from being polluted by the world.
         </h5>
     </div>
 </div>
