--- a/src/app/homepage/body/body.component.css
+++ b/src/app/homepage/body/body.component.css
@@ -50,8 +50,8 @@ h1 {
 }
 .body-bottom {
   overflow-x : hidden;
-  margin-left: -50%;
+  margin: 0% 0% -10% 0%;
   max-width: 100%;
   height: 200px;
-  width: 50%;
+  width: 100%;
 }
