--- a/src/app/homepage/body/body.component.css
+++ b/src/app/homepage/body/body.component.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     color: rgb(0, 0, 0);
     background-color: lightblue;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -7,7 +7,6 @@ h1 {
   h2 {
     color: #444;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    /* font-weight: lighter; */
     font-size: 125%;
   }
   h3 {
@@ -15,7 +14,7 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 110%;
     
-  }
+  } */
   body {
     margin: 2em;
   }
@@ -23,11 +22,8 @@ h1 {
     color: #333;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
-  /* everywhere else */
-  * {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  h4 {
+  
+  /* h4 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #333;
     font-size: 75%;
@@ -37,7 +33,7 @@ h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 120%;
     margin: -180% 0% 0% 50%;
-  }
+  } */
 .articletext {
     margin : 5% 150px 250px 300px;
     height : 800px;
