--- a/src/app/ministry/ministry.component.css
+++ b/src/app/ministry/ministry.component.css
@@ -15,7 +15,12 @@ hr {
     width: 300px;
 }
 .ministry-card img {
-    width: 100%;
+    max-width: 100%;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: fill;
+    margin-bottom: 6%;
 }
 .ministry-card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
