--- a/src/app/min-camp-carousel/min-camp-carousel.component.html
+++ b/src/app/min-camp-carousel/min-camp-carousel.component.html
@@ -6,13 +6,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-md-block w-100" src="../../assets/img/man.jpg" alt="First slide">
+            <img class="d-md-block w-100" src="../../assets/img/camphope_pic.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-md-block w-100" src="../../assets/img/man.jpg" alt="Second slide">
+            <img class="d-md-block w-100" src="../../assets/img/edu_pic.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-md-block w-100" src="../../assets/img/man.jpg" alt="Third slide">
+            <img class="d-md-block w-100" src="../../assets/img/water_fil_pic.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
