--- a/src/app/homepage/header/header.component.html
+++ b/src/app/homepage/header/header.component.html
@@ -1,4 +1,43 @@
 <div class = "header">
     <h1>{{title | uppercase}}</h1>
     <hr>
+
+    <div class = "author">Written by: Tu Uyen (Tiv) Tran</div> 
+    
+    <div class = "note">
+            Welcome to BRIDGES OF HOPE--Hope for the Fatherless.
+    </div>
+    <p class="letter">
+            We are a mission ministry based in U.S.A that work jointly with local Vietnamese churches to serve orphans in remote areas of the country. The original visionary leader of this ministry was Pastor Paul Pham. Coming from one of the first generation of Vietnamese families who were touched by Protestant movement, Pastor Paul is passionate about ministering to orphans and widows. His God-given vision entails ongoing partnership and cooperation with local Pastors in Vietnam. This relationship fosters a unique sustaining enrichment and nurturing support for the orphans that our mission team has worked with even long after we left the country. Each year, around early June, Paul would organize a group of fellow God loving families, youths, and pastors (who ever is willing to serve in this capacity) to join his family on an adventure serving different missionary ministries around impoverished areas of Vietnam.
+            <br><br>Being an orphan himself, Paul's focus was placed heavily on the importance of sowing Gods Word; His Hope & love to these orphans. Thus Paul worked vigorously to coordinate and design a one day and/or multi-day VBS experience any children can NEVER forget!
+            <br><br>Moreover, Paul understands the importance of good health and physical wellness. He created a network of organizations that work with medical professionals who are passionate about giving back to volunteer their time to serve in remote and impoverish communities.
+            <br><br>We invite you to look around and get a feel for our ministry. Feel free to share any comments or questions that might be on your mind through our emails and contacts. As you can see, the needs are quite diverse. However, our ministries are very focused--surrounding the well being of our beloved orphans.
+            <br>As God touches you, please consider partnering with our ministries. As our beloved Christ
+            <br>in Matthew 9:37 "the harvest is plentiful"
+            <br><br><br>In Christ alone,
+            <br><br>Tiv.
+    </p>
+    <div class ="verse" style = "font-size: 20px">
+        <b href="https://www.pngkey.com/"><img src="https://www.pngkey.com/png/full/102-1028565_small-story-book-clip-art.png" height = "30" width = "40"></b>
+        <style>
+        a:link {
+            color:black;
+            background-color: transparent;
+            text-decoration: none;
+        }
+        a:hover {
+            color:red;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+        a:visited {
+            color:purple;
+            background-color: transparent;
+            text-decoration: underline;
+        }
+        </style>
+            <a href="https://www.biblegateway.com/passage/?search=James+1%3A27&version=NIV" target="_blank">James 1:27</a>
+            <br>Religion that God our Father accepts as pure and faultless is this: to look after orphans and widows in their distress and to keep oneself from being polluted by the world.
+    </div>
+    <div class = "body-bottom" style = "background-color: lightblue"></div>
 </div>
