--- a/src/app/min-camp-hope/min-camp-hope.component.html
+++ b/src/app/min-camp-hope/min-camp-hope.component.html
@@ -3,7 +3,7 @@
 
 <app-min-camp-carousel style="float: left"></app-min-camp-carousel>
 
-<p class = "words">
+<p class = "words2">
     Each year, our VN local team work hard to build relationships with families with orphans around the community in Southern region of Vietnam. 
     Throughout the year, they build a net work that embodies an assigned trusted leader from one of the local churches who is responsible for ongoing communication and visitation with these families of orphans. 
     Right here, I want to pause for a few minutes to explain about the criteria for orphans in VN. 
@@ -11,7 +11,7 @@
     Thus, these children are placed in the care of living relatives. Resulting in increased poverty; lack of educational opportunities. 
     As explained by most of the orphans we encountered, some of these children (as young as 6 years of age) have to quit school to help with family financial needs by working 10 hours a day, 7 days a week for very menial wage. 
 </p>
-
+<br>
 <p class = "words2">
     One of the burden for most missions ministry is the question of what happens to these orphans after we are done with the mission? 
     Paul's vision was not to just provide a temporary boost of Christ through mission but a sustainable platform for continuous growth in hope and love of Christ even after we leave. 
